crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_column_do.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select do from t

-- Output:
select do from t;
