crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_column_end.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select end from t

-- Output:
select "end" from t;
