crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_column_filter.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select filter from t

-- Output:
select filter from t;
