crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_column_first.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select first, last from t

-- Output:
select
  "first",
  "last"
from t;
