crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_column_key.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select key, value from settings

-- Output:
select
  "key",
  value
from settings;
